# opengl_simple_demo

./: CMakeLists.txt  README.md
third_part/glad/: CMakeLists.txt  glad.c  glad.h
